# libelas

./: .clang-tidy  CMakeLists.txt
example/: main.cpp
include/elas/: descriptor.h  elas.h  filter.h  image.h  matrix.h  timer.h  triangle.h
src/: descriptor.cpp  elas.cpp  filter.cpp  main.cpp  matrix.cpp  triangle.cpp
